# lieAlgebras

./: Adjoint-Tests.cpp  CMakeLists.txt  CoordinateFrame-Sim.cpp  CoordinateFrame-Sim2.cpp  README.md  SL3-Unit-Tests.cpp  SO3-SE3-Unit-Tests.cpp  lieAlgebras.cpp  lieAlgebras.h
